--- a/app/src/main/res/layout/list_row_doctor_search.xml
+++ b/app/src/main/res/layout/list_row_doctor_search.xml
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="8dp"
         app:srcCompat="@drawable/ic_doctor" />
 
     <TextView
@@ -21,10 +21,11 @@
         android:layout_alignTop="@+id/lr_iv_DocImage"
         android:layout_marginStart="12dp"
         android:layout_toEndOf="@+id/lr_iv_DocImage"
-        android:text="Dr. Faisal Khali"
-        android:textSize="@dimen/doc_name_size" />
+        android:text="Dr. Faisal Khali koborerdfjkdsjfl"
+        android:textSize="17sp" />
 
     <TextView
+        android:textSize="11sp"
         android:id="@+id/lr_tv_DocInstitution"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -43,15 +44,6 @@
         android:text="Book" />
 
     <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/lr_btn_book"
-        android:layout_below="@+id/lr_btn_book"
-        android:layout_marginEnd="14dp"
-        app:srcCompat="@drawable/ic_arrow_right_32px" />
-
-    <ImageView
         android:id="@+id/lr_iv_DocAvailableStatus"
         android:layout_width="@dimen/doc_availableStatus_width"
         android:layout_height="@dimen/doc_availableStatus_height"
@@ -62,6 +54,7 @@
         app:srcCompat="@drawable/ic_offline" />
 
     <TextView
+        android:textSize="12sp"
         android:id="@+id/lr_tv_doc_consult_price"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
