--- a/app/src/main/res/layout/pt_activity_home.xml
+++ b/app/src/main/res/layout/pt_activity_home.xml
@@ -8,7 +8,14 @@
     android:fitsSystemWindows="true"
     tools:openDrawer="start">
 
+  <!--  <include
+        android:id="@+id/toolbar"
+        layout="@layout/appbar_layout"
+        android:layout_width="match_parent"
+        android:layout_height="40dp" />-->
+
     <include
+
         layout="@layout/pt_app_bar_home"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
