#build 018(Button UI)

--- a/app/src/main/res/layout/activity_sex_ndob_reg.xml
+++ b/app/src/main/res/layout/activity_sex_ndob_reg.xml
@@ -74,6 +74,7 @@
         android:inputType="date" />
 
     <Button
+        style="@style/general_button_style"
         android:id="@+id/btn_pt_reg_submit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
