--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -173,4 +173,12 @@
         <item name="android:src">@drawable/splash_logo</item>
     </style>
 
+    <!--Button General Style-->
+    <style name="general_button_style">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:background">@drawable/general_button_look</item>
+    </style>
+
 </resources>
