--- a/app/src/main/res/drawable/resend_otp_btn_shape_copy.xml
+++ b/app/src/main/res/drawable/resend_otp_btn_shape_copy.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="14dp" />
-    <solid android:color="@color/btn_green_" />
+    <solid android:color="@color/ao_green" />
     <padding
         android:bottom="0dp"
         android:left="0dp"
@@ -13,5 +13,5 @@
         android:height="60dp" />
     <stroke
         android:width="3dp"
-        android:color="@color/btn_green_border" />
+        android:color="@color/dark_gray" />
 </shape>
