--- a/app/src/main/res/layout/activity_pt_doctor_profile.xml
+++ b/app/src/main/res/layout/activity_pt_doctor_profile.xml
@@ -53,6 +53,7 @@
         app:tabMode="fixed" />
 
     <Button
+        style="@style/general_button_style"
         android:id="@+id/btn_appointBook"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
