--- a/app/src/main/res/layout/frag_describe_problem.xml
+++ b/app/src/main/res/layout/frag_describe_problem.xml
@@ -33,6 +33,7 @@
             android:scrollbars="vertical" />
 
         <Button
+            style="@style/general_button_style"
             android:id="@+id/btn_symptom_submit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
