--- a/app/src/main/res/layout/frag_otp.xml
+++ b/app/src/main/res/layout/frag_otp.xml
@@ -91,6 +91,7 @@
         android:textColor="@color/color_white" />
 
     <Button
+        style="@style/general_button_style"
         android:id="@+id/btn_otp_verify"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
