--- a/app/src/main/res/layout/frag_pt_health_profile.xml
+++ b/app/src/main/res/layout/frag_pt_health_profile.xml
@@ -9,6 +9,7 @@
 
 
         <Button
+            style="@style/general_button_style"
             android:id="@+id/btn_symptom_submit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
