--- a/app/src/main/res/layout/frag_pt_pickup_calander.xml
+++ b/app/src/main/res/layout/frag_pt_pickup_calander.xml
@@ -19,6 +19,7 @@
 
 
         <Button
+            style="@style/general_button_style"
             android:id="@+id/btn_5"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
