--- a/app/src/main/res/layout/frag_pt_profile.xml
+++ b/app/src/main/res/layout/frag_pt_profile.xml
@@ -10,6 +10,7 @@
 
         <Button
             android:id="@+id/btn_PtPersonalInfoSave"
+            style="@style/general_button_style"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
