--- a/app/src/main/res/layout/list_row_doctor_search.xml
+++ b/app/src/main/res/layout/list_row_doctor_search.xml
@@ -25,16 +25,17 @@
         android:textSize="17sp" />
 
     <TextView
-        android:textSize="11sp"
         android:id="@+id/lr_tv_DocInstitution"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/lr_iv_DocImage"
         android:layout_alignStart="@+id/lr_tv_DocName"
-        android:text="TextView" />
+        android:text="TextView"
+        android:textSize="11sp" />
 
     <Button
         android:id="@+id/lr_btn_book"
+        style="@style/general_button_style"
         android:layout_width="80dp"
         android:layout_height="40dp"
         android:layout_alignParentEnd="true"
@@ -54,19 +55,19 @@
         app:srcCompat="@drawable/ic_offline" />
 
     <TextView
-        android:textSize="12sp"
         android:id="@+id/lr_tv_doc_consult_price"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/lr_iv_DocAvailableStatus"
         android:text="TextView"
-        android:textColor="@color/red" />
+        android:textColor="@color/red"
+        android:textSize="12sp" />
 
- <!--   <TextView
-        android:id="@+id/lr_tv_docRating"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/imageView3"
-        android:layout_below="@+id/lr_tv_DocName"
-        android:text="@string/_30" />-->
+    <!--   <TextView
+           android:id="@+id/lr_tv_docRating"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:layout_alignEnd="@+id/imageView3"
+           android:layout_below="@+id/lr_tv_DocName"
+           android:text="@string/_30" />-->
 </RelativeLayout>
