--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -60,9 +60,13 @@
     <!--date picker container height-->
     <dimen name="date_picker_height">40dp</dimen>
     <dimen name="date_picker_text_size">14sp</dimen>
+
     <!--logo height and width -->
     <dimen name="logo_layout_width">80dp</dimen>
     <dimen name="logo_layout_height">80dp</dimen>
 
+    <!--login page Spinner Height-->
     <dimen name="spinner_height">30dp</dimen>
+
+    <dimen name="round_shape_button_corner_rad">30dp</dimen>
 </resources>
