--- a/app/src/main/res/layout/frag_pt_profile.xml
+++ b/app/src/main/res/layout/frag_pt_profile.xml
@@ -15,6 +15,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_alignParentStart="true"
+            android:layout_marginBottom="@dimen/margin_def"
             android:text="@string/save" />
 
         <EditText
@@ -85,8 +86,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_below="@+id/tvPtAge"
-
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="5dp"
             android:ems="10"
             android:hint="@string/present_address"
             android:inputType="textPersonName" />
