#build 021 Profile functional (get & save)

--- a/app/src/main/res/menu/activity_home2_drawer.xml
+++ b/app/src/main/res/menu/activity_home2_drawer.xml
@@ -12,6 +12,11 @@
             android:id="@+id/nav_health"
             android:icon="@drawable/ic_menu_heartbeat"
             android:title="@string/health" />
+<!-- for future work
+        <item
+            android:id="@+id/nav_family_member_prof"
+            android:icon="@drawable/ic_menu_family_group"
+            android:title="@string/family_member_profile" />-->
 
         <item
             android:id="@+id/nav_logout"
