--- a/app/src/main/res/drawable/ripple_effect_login.xml
+++ b/app/src/main/res/drawable/ripple_effect_login.xml
@@ -4,7 +4,7 @@
     <item android:state_pressed="true">
         <shape android:shape="rectangle">
             <corners android:radius="3.0dip" />
-            <solid android:color="@color/neon_pink" />
+            <solid android:color="@color/btn_green_border" />
         </shape>
     </item>
     <item android:state_focused="true">
