--- a/app/src/main/res/layout/frag_pt_health_profile.xml
+++ b/app/src/main/res/layout/frag_pt_health_profile.xml
@@ -9,19 +9,20 @@
 
 
         <Button
+            android:id="@+id/btn_ptn_healthProfile"
             style="@style/general_button_style"
-            android:id="@+id/btn_symptom_submit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_alignParentStart="true"
+            android:layout_marginBottom="@dimen/margin_def"
             android:text="@string/save" />
 
         <!--Spinner-->
         <RelativeLayout
-            android:layout_alignParentStart="true"
             android:id="@+id/spinner_layout"
-            style="@style/spinner_border_style">
+            style="@style/spinner_border_style"
+            android:layout_alignParentStart="true">
 
             <Spinner
                 android:id="@+id/spBloodGroup"
