--- a/app/src/main/res/layout/frag_pt_health_profile.xml
+++ b/app/src/main/res/layout/frag_pt_health_profile.xml
@@ -18,11 +18,13 @@
             android:layout_marginBottom="@dimen/margin_def"
             android:text="@string/save" />
 
+
         <!--Spinner-->
         <RelativeLayout
+
             android:id="@+id/spinner_layout"
             style="@style/spinner_border_style"
-            android:layout_alignParentStart="true">
+            android:layout_below="@+id/tvLabel">
 
             <Spinner
                 android:id="@+id/spBloodGroup"
@@ -31,34 +33,80 @@
             <ImageView style="@style/spinner_image_style" />
         </RelativeLayout>
 
+        <TextView
+            android:id="@+id/tvLable2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/spinner_layout"
+            android:layout_marginBottom="@dimen/margin_def"
+            android:layout_marginTop="@dimen/margin_def"
+            android:text="Weight" />
 
         <EditText
-
             android:id="@+id/edtWeight"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
-            android:layout_below="@+id/spinner_layout"
+            android:layout_below="@+id/tvLable2"
             android:ems="10"
             android:hint="@string/weight"
             android:inputType="number" />
+
+        <TextView
+            android:id="@+id/tvLable3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/edtWeight"
+            android:layout_marginBottom="@dimen/margin_def"
+            android:layout_marginTop="@dimen/margin_def"
+            android:text="Height" />
+
+        <EditText
+
+            android:id="@+id/edtHeight"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/tvLable3"
+            android:ems="10"
+            android:hint="@string/height"
+            android:inputType="number" />
+
+        <TextView
+            android:id="@+id/tvLable4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:layout_below="@+id/edtHeight"
+            android:layout_marginBottom="@dimen/margin_def"
+            android:layout_marginTop="@dimen/margin_def"
+            android:text="@string/bp" />
 
         <EditText
             android:id="@+id/edtBp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
-            android:layout_below="@+id/edtWeight"
+            android:layout_below="@+id/tvLable4"
             android:ems="10"
             android:hint="@string/bp"
             android:inputType="text" />
+
+        <TextView
+            android:id="@+id/tvLable5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/edtBp"
+            android:layout_marginBottom="@dimen/margin_def"
+            android:layout_marginTop="@dimen/margin_def"
+            android:text="@string/family_disease_history" />
 
         <EditText
             android:id="@+id/edtFamilyDiseaseHistory"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
-            android:layout_below="@+id/edtBp"
+            android:layout_below="@+id/tvLable5"
             android:ems="10"
             android:hint="@string/family_disease_history"
             android:inputType="text" />
@@ -72,7 +120,8 @@
             android:layout_below="@+id/edtFamilyDiseaseHistory"
             android:ems="10"
             android:hint="@string/existing_medical_report"
-            android:inputType="textPersonName" />
+            android:inputType="textPersonName"
+            android:visibility="gone" />
 
     </RelativeLayout>
 
