--- a/app/src/main/res/layout/frag_pt_doc_details.xml
+++ b/app/src/main/res/layout/frag_pt_doc_details.xml
@@ -91,6 +91,16 @@
             app:layout_constraintTop_toBottomOf="@+id/tv_CallChargeLbl" />
 
 
+        <TextView
+            android:textColor="@color/royal_blue"
+            android:id="@+id/tvAvailableTime"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="5dp"
+            android:text="@string/available_time"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tvAvailableTimeLbl" />
     </android.support.constraint.ConstraintLayout>
 
 
