--- a/app/src/main/res/menu/activity_home2_drawer.xml
+++ b/app/src/main/res/menu/activity_home2_drawer.xml
@@ -4,6 +4,11 @@
     tools:showIn="navigation_view">
 
     <group android:checkableBehavior="single">
+
+        <item
+            android:id="@+id/nav_home"
+            android:icon="@drawable/ic_menu_home"
+            android:title="@string/home" />
         <item
             android:id="@+id/nav_profile"
             android:icon="@drawable/ic_menu_profile"
